fix: compatibilidad con firefox mejorada en el reproductor

--- a/css/styles.css
+++ b/css/styles.css
@@ -131,8 +131,8 @@ header {
 
 
 .senaLogo {
-    width: 100px;
-    height: 100px;
+    width: 60px;
+    height: 60px;
 }
 
 .senaLogo img {
@@ -143,8 +143,8 @@ header {
 }
 
 .govLogo {
-    width: 200px;
-    height: 200px;
+    width: 100px;
+    height: auto;
     padding: 50px 0;
 }
 
@@ -413,8 +413,8 @@ main {
 }
 
 .slider-navegation .btn-nav-slider {
-    width: 15px;
-    height: 5px;
+    width: 20px;
+    height: 6px;
     border-radius: 5px;
     background: #fff;
     cursor: pointer;
@@ -585,7 +585,9 @@ main {
     width: 450px;
 }
 
-/* Controles tipo range con dos colores (progreso y resto) */
+/* ---------------------------------------------------------------
+    Controles tipo range con dos colores (progreso y resto)
+------------------------------------------------------------------ */
 .control-range {
     -webkit-appearance: none;
     appearance: none;
@@ -601,6 +603,9 @@ main {
     filter: brightness(1.05)
 }
 
+/* -------------------------------------------------------------------
+    BAVEGADOR EDGE
+---------------------------------------------------------------------- */
 .control-range::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
@@ -611,12 +616,20 @@ main {
     border: 3px solid var(--color-acento);
     cursor: pointer;
 }
+.control-range.volumen::-webkit-slider-thumb {
+    border-color: #39a900;
+    box-shadow: 0 0 0 4px rgba(255, 255, 255, 0.222);
+}
 
+/* -------------------------------------------------------------------
+    BAVEGADOR MOZILLA FIREFOX
+---------------------------------------------------------------------- */
 .control-range::-moz-range-thumb {
-    width: 16px;
-    height: 16px;
+    width: 12px;
+    height: 12px;
     border-radius: 50%;
-    background: #5a5a5a;
+    background: #ffffff;
+    border: 3px solid #39a900;
     cursor: pointer;
 }
 
@@ -626,16 +639,11 @@ main {
     background: linear-gradient(90deg, #5a5a5a 0%, #fff 50%);
     border-radius: 999px;
 }
-
-.control-range.volumen::-webkit-slider-thumb {
+.control-range.volumen::-moz-range-thumb {
     border-color: #39a900;
     box-shadow: 0 0 0 4px rgba(255, 255, 255, .18);
 }
 
-.control-range.volumen::-moz-range-thumb {
-    border-color: #5a5a5a;
-    box-shadow: 0 0 0 4px rgba(255, 255, 255, .18);
-}
 
 /* Iconos SVG */
 .icono {
@@ -1108,6 +1116,7 @@ footer {
 
     .texto-descripcion {
         font-size: 1rem;
+        height: auto;
     }
 
     .fila-controles {
